--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>    <html class="lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>    <html class="lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class=""> <!--<![endif]-->
+
 
   <head>
   <meta charset="utf-8">
@@ -283,7 +280,7 @@
 		  
 		<div class="chapter grid-item">
 		  
-		  <a href="/responsible-data-handbook/chapters/chapter-02b-understanding-data.html"><img class="img" title="Undestanding Data" src="/responsible-data-handbook/assets/img/chapter-2.2.png"/>
+		  <a href="/responsible-data-handbook/chapters/chapter-02b-understanding-data.html"><img class="img" title="Understanding Data" src="/responsible-data-handbook/assets/img/chapter-2.2.png"/>
 
 		  <h6>read</h6>
 
@@ -298,7 +295,7 @@
 		 
 		 <a href="/responsible-data-handbook/assets/slides/understanding-data-02b.odp" target="_blank">
 
-		  <img class="img" title="Undestanding Data" src="/responsible-data-handbook/assets/img/chapter-2.2.png"/>
+		  <img class="img" title="Understanding Data" src="/responsible-data-handbook/assets/img/chapter-2.2.png"/>
 
 		 <h6>download</h6></a>
 
