Responsive responsible data menu, other responsive improvements

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@ layout: default
 <div class="home">
 
     <div class="homehead row">
-      <div class="col-md-3"></div>
+      <div class="col-sm-3"></div>
 
-      <div class="col-md-6">
+      <div class="col-sm-6">
         <img class="title" src="{{ "/assets/img/title-1.png" | prepend: site.baseurl }}" />
       </div>
 
-      <div class="col-md-3"></div>
+      <div class="col-sm-3"></div>
 
     </div>
 
