Responsive responsible data menu

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <nav id="menu" class="indicators ">
           <ul>
-            <li id="menu-item-139" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-7 current_page_item menu-item-139"><a href="https://responsibledata.io/">Home</a></li>
+            <li id="menu-item-139" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-7 menu-item-139"><a href="https://responsibledata.io/">Home</a></li>
             <li id="menu-item-153" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-153"><a href="https://responsibledata.io/about/">About</a></li>
             <li id="menu-item-204" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-204"><a href="https://responsibledata.io/events/">Events</a></li>
             <li id="menu-item-921" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-921"><a href="https://responsibledata.io/blog/">Blog</a></li>
@@ -75,13 +75,13 @@
             <div class="home">
 
     <div class="homehead row">
-      <div class="col-md-3"></div>
+      <div class="col-sm-3"></div>
 
-      <div class="col-md-6">
+      <div class="col-sm-6">
         <img class="title" src="/responsible-data-handbook/assets/img/title-1.png" />
       </div>
 
-      <div class="col-md-3"></div>
+      <div class="col-sm-3"></div>
 
     </div>
 
@@ -155,6 +155,7 @@
 	<div class="grid col-md-10">
 		<div class="bookall grid-item">
 
+
 			<img src="/responsible-data-handbook/assets/img/chapter-0.png" />
 			
 			<a href="/responsible-data-handbook/assets/pdf/responsible-data-handbook.pdf" target="_blank"><h6 class="download">download</h6></a>
@@ -162,6 +163,8 @@
 		</div>
 
 		<div class="slideall slide grid-item">
+
+
 
 			<img src="/responsible-data-handbook/assets/img/chapter-0.png" />
 			<a href="/responsible-data-handbook/assets/slides/responsible-data-handbook.odp" target="_blank"><h6 class="download">download</h6></a>
@@ -187,6 +190,8 @@
 		</div>
 
 		<div class="slide grid-item">
+
+
 		 
 		 <a href="/responsible-data-handbook/assets/slides/introduction-00.odp" target="_blank">
 
@@ -214,6 +219,8 @@
 		</div>
 
 		<div class="slide grid-item">
+
+
 		 
 		 <a href="/responsible-data-handbook/assets/slides/designing-a-project-01.odp" target="_blank">
 
@@ -241,6 +248,8 @@
 		</div>
 
 		<div class="slide grid-item">
+
+
 		 
 		 <a href="/responsible-data-handbook/assets/slides/managing-data-02.odp" target="_blank">
 
@@ -268,6 +277,8 @@
 		</div>
 
 		<div class="slide grid-item">
+
+
 		 
 		 <a href="/responsible-data-handbook/assets/slides/getting-data-02a.odp" target="_blank">
 
@@ -295,6 +306,8 @@
 		</div>
 
 		<div class="slide grid-item">
+
+
 		 
 		 <a href="/responsible-data-handbook/assets/slides/understanding-data-02b.odp" target="_blank">
 
@@ -322,6 +335,8 @@
 		</div>
 
 		<div class="slide grid-item">
+
+
 		 
 		 <a href="/responsible-data-handbook/assets/slides/sharing-data-02c.odp" target="_blank">
 
@@ -349,6 +364,8 @@
 		</div>
 
 		<div class="slide grid-item">
+
+
 		 
 		 <a href="/responsible-data-handbook/assets/slides/closing-a-project-03.odp" target="_blank">
 
