--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>Responsible Data Handbook</title>
   <meta name="description" content="A primer on why Responsible Data is a relevant concern for international development work.">
   
+  <link rel="shortcut icon" href="/responsible-data-handbook/assets/img/RD-favicon.png" />
   <link rel="stylesheet" type="text/css" href="/responsible-data-handbook/assets/css/font/stylesheet.css" />
   <link rel="stylesheet" href="/responsible-data-handbook/assets/css/main.css">
 
