Made slides page. Closes the-engine-room/responsible-data-handbook#22

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@ layout: default
 
       <div class="col-sm-8">
 
-        <h2 class="button downloadbook"><a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | site.baseurl }}" target="_blank">Download Book PDF</a></h2>
+        <h2 class="button downloadbook"><a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | prepend: site.baseurl }}" target="_blank">Download Book PDF</a></h2>
 
         <span class="separator">/</span>
 
-        <h2 class="button downloadslides"><a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | site.baseurl }}" target="_blank">Download Book PDF</a></h2>
+        <h2 class="button downloadslides"><a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | prepend: site.baseurl }}" target="_blank">Download Book PDF</a></h2>
 
         <span class="separator">/</span>
 
-        <h2 class="button slides"><a href="{{ "/slides.html" | site.baseurl }}">View Chapter Slide Decks</a></h2>
+        <h2 class="button slides"><a href="{{ "/pages/slides.html" | prepend: site.baseurl }}">View Chapter Slide Decks</a></h2>
 
       </div>
 
