New slides page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 
     <div class="page-content">
 
-
       
 
             <div class="home">
@@ -106,15 +105,15 @@
 
       <div class="col-sm-8">
 
-        <h2 class="button downloadbook"><a href="/assets/pdf/responsible-data-handbook.pdf" target="_blank">Download Book PDF</a></h2>
+        <h2 class="button downloadbook"><a href="/responsible-data-handbook/assets/pdf/responsible-data-handbook.pdf" target="_blank">Download Book PDF</a></h2>
 
         <span class="separator">/</span>
 
-        <h2 class="button downloadslides"><a href="/assets/pdf/responsible-data-handbook.pdf" target="_blank">Download Book PDF</a></h2>
+        <h2 class="button downloadslides"><a href="/responsible-data-handbook/assets/pdf/responsible-data-handbook.pdf" target="_blank">Download Book PDF</a></h2>
 
         <span class="separator">/</span>
 
-        <h2 class="button slides"><a href="/slides.html">View Chapter Slide Decks</a></h2>
+        <h2 class="button slides"><a href="/responsible-data-handbook/pages/slides.html">View Chapter Slide Decks</a></h2>
 
       </div>
 
