Index styling complete. Closes the-engine-room/responsible-data-handbook#27

--- a/index.html
+++ b/index.html
@@ -29,27 +29,25 @@ layout: default
     
     </div>
 
-    <div class="buttonrow row">
+
+    <div class="sliderow row">
       <div class="col-sm-2"></div>
 
       <div class="col-sm-8">
-
-        <h2 class="button downloadbook"><a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | prepend: site.baseurl }}" target="_blank">Download Book PDF</a></h2>
-
-        <span class="separator">/</span>
-
-        <h2 class="button downloadslides"><a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | prepend: site.baseurl }}" target="_blank">Download Book PDF</a></h2>
-
-        <span class="separator">/</span>
-
-        <h2 class="button slides"><a href="{{ "/pages/slides.html" | prepend: site.baseurl }}">View Chapter Slide Decks</a></h2>
-
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="resource">Slides</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="button slides"><a href="{{ "/pages/slides.html" | prepend: site.baseurl }}">Chapter Slide Decks</a></h2>
+          </div>
+        </div>
       </div>
 
       <div class="col-sm-2"></div>
-
     </div>
-
 
 
 
