--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
       	<div class="col-sm-3 col-md-4 chapter grid-item">
 
-				  <a href="/responsible-data-handbook/assets/pdf/responsible-data-handbook.pdf" target="_blank"><img class="img" title="Responsible Data Handbook" src="/responsible-data-handbook/assets/img/chapter-0.png"/>
+				  <a href="/responsible-data-handbook/assets/pdf/responsible-data-handbook.pdf" target="_blank"><img class="img" title="Responsible Data Handbook" src="/responsible-data-handbook/assets/img/handbook-front.jpg"/>
           		
           			<h6 class="button downloadbook download">Download Book</h6></a>
 
@@ -153,7 +153,7 @@
 
       	<div class="col-sm-3 col-md-4 chapter grid-item">
 
-				  	<a href="/responsible-data-handbook/assets/pdf/responsible-data-handbook.pdf" target="_blank"><img class="img" title="Chapter Summaries" src="/responsible-data-handbook/assets/img/chapter-0.png"/>
+				  	<a href="/responsible-data-handbook/assets/pdf/responsible-data-handbook.pdf" target="_blank"><img class="img" title="Chapter Summaries" src="/responsible-data-handbook/assets/img/handbook-front.jpg"/>
           		
           			<h6 class="button downloadbook download">Download Chapter Summaries</h6></a>
       	</div>
