--- a/pages/slides.html
+++ b/pages/slides.html
@@ -157,10 +157,10 @@
 		<div class="col-sm-3 col-md-2 chapter grid-item">
 				 <a href="/responsible-data-handbook/assets/slides/fullslides.pdf" target="_blank">
 
-				 <img class="img" title="Full Slide Deck" src="/responsible-data-handbook/assets/img/chapter-0.png"/>
+				 <img class="img" title="Full Slide Deck" src="/responsible-data-handbook/assets/img/handbook-front.jpg"/>
 					
 
-				<h6 class="download">download</h6></a>
+				<h6 class="download">download all slides</h6></a>
 
          	</div>
 
