Index update, side menu chapter page change

--- a/index.html
+++ b/index.html
@@ -34,14 +34,32 @@ layout: default
       <div class="col-sm-2"></div>
 
       <div class="col-sm-8">
+
         <div class="row">
-          <div class="col-sm-12">
-            <h2 class="resource">Slides</h2>
+
+          <div class="col-md-4">
+            <div class="button">
+
+              <a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | prepend: site.baseurl }}" target="_blank">
+                  <h6 class="downloadbook download">Download Handbook</h6></a>
+
+              </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-12">
-            <h2 class="button slides"><a href="{{ "/pages/slides.html" | prepend: site.baseurl }}">Chapter Slide Decks</a></h2>
+
+          <div class="col-md-4">
+
+            <div class="button">
+              <a href="{{ "/assets/pdf/responsible-data-handbook.pdf" | prepend: site.baseurl }}" target="_blank">
+              <h6 class="downloadbook download">Download Chapter Summaries</h6>
+            </a>
+            </div>
+          
+          </div>
+
+          <div class="col-md-4">
+            <div class="button">
+              <a href="{{ "/pages/slides.html" | prepend: site.baseurl }}"><h6 class="downloadbook download">Explore Slide Decks</h6></a>
+            </div>
           </div>
         </div>
       </div>
