Slide page menufix

--- a/pages/slides.html
+++ b/pages/slides.html
@@ -19,7 +19,6 @@
   <link rel="canonical" href="http://the-engine-room.github.io/responsible-data-handbook/pages/slides">
 
   	<script src="/responsible-data-handbook/assets/js/jquery-1.12.2.min.js"></script>
-  	<script src="/responsible-data-handbook/assets/js/isotope.min.js"></script>
   	<script src="/responsible-data-handbook/assets/js/application.js"></script>
 
 
@@ -71,7 +70,7 @@
     <div class="page-content">
 
       
-      <div class="row">
+      <div class="row slidepage">
 
             <div class="col-sm-3">
               <div class="row">
