Updates to markdown

--- a/pages/slides.html
+++ b/pages/slides.html
@@ -85,7 +85,7 @@
 
 
 		<div class="download">
-			<a href="/responsible-data-handbook/assets/slides/responsible-data-handbook-slides.pdf" target="_blank"><h6>
+			<a href="/responsible-data-handbook/assets/slides/responsible-data-handbook-slides-pdf.zip" target="_blank"><h6>
 				Download All Slides as PDF
 			</h6></a>
 
@@ -93,7 +93,7 @@
 
 		<div class="download">
 
-			<a href="/responsible-data-handbook/assets/slides/responsible-data-handbook-slides.pptx" target="_blank"><h6>
+			<a href="/responsible-data-handbook/assets/slides/responsible-data-handbook-slides-pptx.zip" target="_blank"><h6>
 				Download All Slides as Powerpoint
 			</h6></a>
 		</div>
