Title styling complete

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@ layout: default
 
 <div class="home">
 
-    <div class="homehead row">
-      <div class="col-sm-3"></div>
+    <div class="homehead">
 
-      <div class="col-sm-6">
-        <img class="title" src="{{ "/assets/img/title-1.png" | prepend: site.baseurl }}" />
-      </div>
+        <div class="titleimgtop">
+          <img class="titletop" src="{{ "/assets/img/title-top.png" | prepend: site.baseurl }}" />
+        </div>
+        <h1>Hand-book</h1>
+        <h2 class="lowertitle">Of the Modern Development Specialist</h2>
+        <h2 class="subtitlefront">Being, a Complete, Illustrated Guide to Responsible Data Usage, Manners, and General Deportment</h2>
+        <div class="titleimg">
+          <img class="titlelow" src="{{ "/assets/img/title-low.png" | prepend: site.baseurl }}" />
+        </div>
 
-      <div class="col-sm-3"></div>
 
     </div>
 
