Updated title styling

--- a/index.html
+++ b/index.html
@@ -73,14 +73,18 @@
 
             <div class="home">
 
-    <div class="homehead row">
-      <div class="col-sm-3"></div>
+    <div class="homehead">
 
-      <div class="col-sm-6">
-        <img class="title" src="/responsible-data-handbook/assets/img/title-1.png" />
-      </div>
+        <div class="titleimgtop">
+          <img class="titletop" src="/responsible-data-handbook/assets/img/title-top.png" />
+        </div>
+        <h1>Hand-book</h1>
+        <h2 class="lowertitle">Of the Modern Development Specialist</h2>
+        <h2 class="subtitlefront">Being, a Complete, Illustrated Guide to Responsible Data Usage, Manners, and General Deportment</h2>
+        <div class="titleimg">
+          <img class="titlelow" src="/responsible-data-handbook/assets/img/title-low.png" />
+        </div>
 
-      <div class="col-sm-3"></div>
 
     </div>
 
